--- a/package.json
+++ b/package.json
@@ -5,22 +5,31 @@
   "homepage": "./",
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
+    "@react-pdf/renderer": "^3.1.14",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "animate.css": "^4.1.1",
+    "autoprefixer": "^10.4.16",
     "axios": "^1.5.1",
+    "formik": "^2.4.5",
+    "postcss": "^8.4.33",
+    "postcss-cli": "^11.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-scripts": "5.0.1",
+    "tailwindcss": "^3.4.1",
     "web-vitals": "^2.1.4",
+    "yup": "^1.3.2",
     "zod": "^3.22.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build:css": "postcss src/tailwind.css -o tailwind.output.css"
   },
   "eslintConfig": {
     "extends": [
@@ -39,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "daisyui": "^4.5.0"
   }
 }
